docs: record perf + search-hardening pass and tapped eval/search levers